--- a/popup.html
+++ b/popup.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Sentiment API</title>
+        <title>Sentiment API</title>
         <style>
             body {
                 width: 400px;
                 height: 500px;
                 margin: 0;
                 padding: 0;
-                overflow: hidden;
-
+                overflow-y: auto;
+                font-family: Arial, sans-serif;
+            }
+            h1 {
+                text-align: center;
+            }
+            button {
+                display: block;
+                margin: 20px auto;
+                padding: 10px 20px;
+                font-size: 16px;
+                cursor: pointer;
+            }
+            #response {
+                margin: 20px;
+                padding: 10px;
+                border: 1px solid #ddd;
+                border-radius: 5px;
+                background-color: #f9f9f9;
             }
         </style>
     </head>
-    <body> 
-        <h1> Test Sentiment</h1>
-        <button id="sendRequest"> Send Random Text</button>
+    <body>
+        <h1 id="title">Test Sentiment</h1>
+        <button id="sendRequest">Send Random Text</button>
         <div id="response"></div>
         <script src="popup.js"></script>
-        </body>
+    </body>
 </html>
